@@ -11,16 +11,16 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -36,7 +36,7 @@ public class DepartmentsTest {
 
     @Test
     public void sortAsc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1",
                 "K1",
                 "K1/SK1/SSK2",
@@ -64,7 +64,7 @@ public class DepartmentsTest {
 
     @Test
     public void sortDesc() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
