@@ -14,7 +14,7 @@ public class LambdaFuncTest {
     public void whenLinearFunctionThenLinearResult() {
         LambdaFunc lambdaFunc = new LambdaFunc();
         List<Double> rsl = lambdaFunc.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11d, 13d, 15d);
+        List<Double> expected = List.of(11d, 13d, 15d);
         assertThat(rsl, is(expected));
     }
 
@@ -22,7 +22,7 @@ public class LambdaFuncTest {
     public void whenQuadFunctionThenQuadResult() {
         LambdaFunc lambdaFunc = new LambdaFunc();
         List<Double> rsl = lambdaFunc.diapason(5, 8, x -> 1 * (x * x) + 1);
-        List<Double> expected = Arrays.asList(26d, 37d, 50d);
+        List<Double> expected = List.of(26d, 37d, 50d);
         assertThat(rsl, is(expected));
     }
 
@@ -30,7 +30,7 @@ public class LambdaFuncTest {
     public void whenExponentialFunctionThenExponentialResult() {
         LambdaFunc lambdaFunc = new LambdaFunc();
         List<Double> rsl = lambdaFunc.diapason(2, 5, x -> Math.pow(2, x) + 1);
-        List<Double> expected = Arrays.asList(5d, 9d, 17d);
+        List<Double> expected = List.of(5d, 9d, 17d);
         assertThat(rsl, is(expected));
     }
 }
